--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 			<p>
 			<label for="address">Enter your address: </label>
 			<input id="address" type="text" name="address" placeholder="123 Main St">
-			<button>Submit</button>
 			</p>
+			<button onclick="location.href='./zoomzoom.html'" type="button">Submit</button>
+
 		</form>
 
 	</body>
