--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<body>
 		<h1>Please enter your information below!</h1>
-		<form>
+		<form action="./zoomzoom.html">
 			<p>
 			<label for="cardnumber">Enter your credit card number: </label>
 			<input id="cardnumber" type="text" name="cardnumber" placeholder="CC#">
@@ -21,7 +21,7 @@
 			<label for="address">Enter your address: </label>
 			<input id="address" type="text" name="address" placeholder="123 Main St">
 			</p>
-			<button onclick="location.href='./zoomzoom.html'" type="button">Submit</button>
+			<input type="submit">Submit</input>
 
 		</form>
 
