--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<label for="address">Enter your address: </label>
 			<input id="address" type="text" name="address" placeholder="123 Main St">
 			</p>
-			<input type="submit">Submit</input>
+			<input type="submit">FormAction</input>
 
 		</form>
 
